# ft_vox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.vox
Project/: main.cpp  window.cpp  window.h
Project/Debug/: debug_gl.cpp  debug_gl.h
Project/Resources/shaders/: fragment.glsl  vertex.glsl
Project/application/: application.cpp  application.h  event.h  input.cpp  input.h  main.cpp  object.cpp  object.h  object_linker.cpp  object_linker.h  object_template.h  timer.h  timestamp.h  unique_object.h  window.cpp  window.h
Project/camera/: camera.cpp  camera.h
Project/chunk/: block.h  chunk.cpp  chunk.h  renderer.cpp
Project/common/: OpenGL.h  aliases.h  array3.h  debug.cpp  debug.h  freetype.h  global.h  opengl.h  property.h
Project/core/core/: core.cpp  core.h  core_settings.h
Project/core/input/: input.cpp  input.h
Project/core/object/: object.cpp  object_template.h  unique_object.h
Project/core/time/: timer.h  timestamp.h
Project/core/window/: window.cpp
Project/debug/: debug_gl.cpp  debug_gl.h
Project/engine/core/: core.cpp  core_settings.h
Project/engine/input/: input.cpp  input.h
Project/engine/object/: object.h  object_template.h  unique_object.h
Project/engine/program/: program.cpp  shader.h  uniform.h
Project/engine/time/: timer.h  timestamp.h
Project/engine/window/: window.cpp  window.h
Project/generation/: generator.cpp  generator.h  generator_controller.cpp  generator_controller.h  noise_generator.cpp  noise_generator.h  plain_generator.cpp  plain_generator.h
Project/generator/: generator.h  generator_controller.h  plain_generator.h
Project/loader/: file.cpp  file.h  loader.cpp  loader.h
Project/map/: block.h  block_id.cpp  block_id.h  chunk.cpp  chunk.h  chunk_casher.h  chunk_editor.h  chunk_generator.h  chunk_loader.h  chunk_settings.h  map.cpp  map.h  map_settings.h  model.cpp  model.h  renderer.cpp  renderer.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h
Project/map/biomes/: biome.cpp  biome.h  desert.cpp  desert.h  plain.cpp  plain.h
Project/model/: model.cpp  model.h
Project/object/: object.cpp  object.h
Project/player/camera/: camera.cpp  camera.h  camera_settings.h
Project/player/player/: player.cpp  player.h  player_settings.h
Project/program/: program.cpp  program.h  shader.cpp  shader.h  uniform.h
Project/renderer/: renderer.cpp  renderer.h
Project/resources/profiles/: main.vox
Project/resources/shaders/: chunk.fragment.glsl  fragment.glsl  highlighter.fragment.glsl  highlighter.vertex.glsl  vertex.glsl
Project/shader/: shader.cpp  shader.h
Project/ui/font/: font.h  symbol.cpp  symbol.h
Project/window/: window.cpp  window.h
Project/world/aabb/: aabb.h
Project/world/block/: block.cpp  block.h  block_id.cpp  block_id.h  block_selector.h  block_selector_renderer.cpp  block_selector_renderer.h  texture_atlas.cpp  texture_atlas.h
Project/world/chunk/: chunk.cpp  chunk.h  chunk_generator.h  chunk_loader.h  chunk_renderer.cpp  chunk_renderer.h  chunk_settings.h  highlighter.cpp  highlighter.h  highlighter_renderer.cpp  highlighter_renderer.h  model.cpp  model.h
Project/world/generator/: generator.h  generator_controller.h
Project/world/loader/: file.cpp  file.h  loader.cpp  loader.h  loader_settings.h
Project/world/program/: program.cpp  program.h
Project/world/renderer/: program.cpp  program.h  renderer.cpp  renderer.h
Project/world/world/: world.cpp  world.h  world_settings.h
project/application/: application.cpp  application.h  main.cpp
project/common/: debug.h  glm.h  stb.h
project/engine/core/: core.cpp  core.h  core_settings.h
project/engine/input/: input.cpp  input.h
project/engine/layout/: layout.h
project/engine/model/: model.cpp  model.h  texture.h
project/engine/model/model/: model.cpp  model.h
project/engine/model/texture/: texture.h
project/engine/object/: inheritor_object.h  object.cpp  object.h  usual_object.h
project/engine/object/inheritor_object/: inheritor_object.h
project/engine/object/object/: object.cpp  object.h
project/engine/object/unique_object/: unique_object.h
project/engine/object/usual_object/: usual_object.h
project/engine/program/: program.cpp  program.h  shader.cpp
project/engine/program/program/: program.cpp
project/engine/program/shader/: shader.cpp  shader.h
project/engine/program/uniform/: uniform.h
project/engine/time/: timer.h  timestamp.h
project/engine/window/: window.cpp  window.h
project/player/camera/: camera.cpp  camera.h  camera_settings.h
project/player/player/: player.cpp  player.h  player_settings.h
project/resources/profiles/: main.vox
project/resources/shaders/: chunk.fragment.glsl  skybox.vertex.glsl  symbol.vertex.glsl
project/sources/application/: application.cpp  application.h  main.cpp
project/sources/application/application/: application.cpp  application.h  main.cpp
project/sources/application/common/: defines.h
project/ui/button/: button.cpp  button.h
project/ui/font/: font.cpp  font.h  font_library.h  symbol.cpp  symbol.h  symbol_renderer.cpp  symbol_renderer.h
project/ui/text/: text.cpp  text.h
project/world/aabb/: aabb.h
project/world/block/: block.cpp  block.h  block_id.h  block_selector.cpp  block_selector.h  block_selector_renderer.cpp  block_settings.h  texture_atlas.cpp  texture_atlas.h
project/world/chunk/: chunk.cpp  chunk.h  chunk_renderer.cpp  chunk_renderer.h  chunk_settings.h
project/world/common/: model.h
project/world/generator/: biome.cpp  biome.h  biome_collection.h  generator.cpp  generator.h  generator_controller.h  noise.h  plain_generator.h
project/world/loader/: loader.cpp  loader.h  loader_settings.h
project/world/texture_atlas/: texture_atlas.cpp  texture_atlas.h
project/world/world/: world.cpp  world_settings.h
resources/shaders/: skybox.fragment.glsl  symbol.fragment.glsl
sources/application/: main.cpp
sources/application/common/: defines.h
sources/engine/launcher/: launcher.cpp
sources/game/launcher/: launcher.cpp  launcher.h
tools/: compile_assembly.sh  install_libraries.sh
(+527 files in other folders)
